styles.css
body {
	background-color: #000;
	font-family: calibri;
	font-size: 12px;
	color: #FFF;
	max-width: 1400px;
}

a:link {
	color: #660000;
}

a:visited {
	color: #666666;
}

a:hover {
	color: #990000;
}

h1 {
	font-family: arial black;
	font-size: 30px;
	color: #660000;
	text-align: center;
}

#darkmatch {
	max-width: 100%;
	display: inline-block;
}

#page-wrap {
	width: 960px;
	margin: 0 auto;
}

.banner {
	max-height: 100px;
	max-width: 100%;
	display: inline-block;
	border-top: 1px solid #808080;
	padding-bottom: 50px;
}

#home-header {
	position: relative;
}

#home-header h1 {
	position: absolute;
	z-index: 1;
	margin-top: -100px;
	font-family: arial black;
	font-size: 25px;
	color: #660000;
	text-align: center;
	margin-left: 140px;
}

#love-wrestling {
	vertical-align: top;
	max-width: 30%;
	margin: 2px;
	padding: 20px;
	display: inline-block;
	border-right: 1px solid #808080;
}

#love-wrestling p {
	padding-bottom: 10px;
	padding-top: 10px;
}

#wrestling-news {
	vertical-align: top;
	max-width: 60%;
	padding: 20px;
	display: inline-block;
}

#wrestling-news li {
	padding-top: 5px;
	padding-bottom: 5px;
}

h3 {
	font-size: 24px;
	font-color: #808080;
}

footer {
	padding-top: 100px;
	margin: 0 auto;
	text-transform: uppercase;
	text-align: center;
}

nav {
	font-size: 20px;
	text-align: center;
	padding-top: 40px;
}

table {
	margin-top: 100px;
	margin-bottom: 100px;
	display: inline-block;
	vertical-align: top;
	max-width: 50%;
	font-size: 15px;
}

td {
	padding: 5px;
}s

#favorites-header {
	margin-top: 50px;
	text-transform: uppercase;
	font-size: 30px;
}

form {
	border-left: 1px solid #808080;
	display: inline-block;
	vertical-align: top;
	max-width: 40%;
	margin-left: 100px;
	padding-left: 20px;
	margin-top: 180px;
}

@media screen and (max-width: 970px) {
	.banner {
		margin-right: 50px;
	}
}

@media screen and (max-width: 970px) {
	#wrestling-news {
		min-width: 30%;
	}
}

